# resume-screener-agent

./: .gitignore  README.md  check_models.py  pyproject.toml  requirements.txt
app/: UVICORN.md  main.py
app/agents/: candidate_evaluation.py  jd_extractor.py  resume_extractor.py
streamlit-ui/: STREAMLIT.md  app.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
